--- a/trunk/coccinella/httpd/404.html
+++ b/trunk/coccinella/httpd/404.html
@@ -1,88 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>The Coccinella: Error 404. File Not Found</title> 
-	
-	<style type="text/css" media="screen">
-	    @import "/httpd/std.css";
-	</style>
-	
+<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<title>Coccinella: Error 404. File not found</title>
+<style type="text/css" media="screen">@import "/httpd/std.css";</style>
 </head>
-<body bgcolor="white" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<center>
-
-
-<br>
-<table width="596" border="0" cellspacing="1" cellpadding="4" bgcolor="#A1A5A9">
-    <tr>
-	<td bgcolor="#F2F2F2"><b>The Coccinella HTTP server, tinyhttpd</b></td>
-    </tr>
-</table>
-<br>
-<table width="596" border="0" cellspacing="0" cellpadding="0">
-    <tr align="left" valign="top">
-	<td width="386"><B>File Not Found (404)</B><BR>
-	You have requested a file or directory listing that either does not exist or that can't be provided.
-	The Coccinella handles file transports through a built in http server which gives limited acces to
-	the users file system. This is due to privacy and security considerations.
-	<BR>
-	</td>
-	<td width="10">&nbsp;</td>
-	<td width="200">
-	<table width="200" border="0" cellspacing="1" cellpadding="0" bgcolor="#A1A5A9">
-	    <tr valign="middle" bgcolor="#E2EEFF">
-		<td>
-		<table width="198" border="0" cellspacing="0" cellpadding="4">
-		    <tr valign="middle" bgcolor="#E2EEFF">
-			<td><b>Application Details</b></td>
-		    </tr>
-		</table>
-		</td>
-	    </tr>
-	    <tr>
-		<td>
-		<table width="198" border="0" cellspacing="0" cellpadding="4">
-		    <tr bgcolor="#F3F8FF">
-			<td width="60" align="left" valign="top">Name:</td>
-			<td width="138" align="right" valign="top"><a href="http://www.thecoccinella.org">The Coccinella</a></td>
-		    </tr>
-		    <tr bgcolor="#FFFFFF">
-			<td align="left" valign="top">Version:</td>
-			<td align="right" valign="top">0.95.12</td>
-		    </tr>
-		    <tr bgcolor="#F3F8FF">
-			<td align="left" valign="top">Release&nbsp;Date:</td>
-			<td align="right" valign="top">June 2006</td>
-		    </tr>
-		    <tr bgcolor="#FFFFFF">
-			<td align="left" valign="top">License:</td>
-			<td align="right" valign="top">GPL</td>
-		    </tr>
-		</table>
-		</td>
-	    </tr>
-	</table>
-	<br>
-	</td>
-    </tr>
-</table>
-<br>
-
-<table width="600" border="0" cellspacing="0" cellpadding="4" class="tableborder">
-    <tr>
-	<td bgcolor="#F2F2F2" align="left" class="G10G"><b>The Coccinella</b></td>
-	<td bgcolor="#F2F2F2" align="right"><img src="/httpd/images/download.gif" width="11" height="10" border="0" alt="" align="absmiddle"></a>
-	<a href="http://www.thecoccinella.org/download/">Download</a></td>
-    </tr>
-</table>
-<br>
-<table width="600" border="0" cellspacing="0" cellpadding="4">
-    <tr>
-	<td class="G10G">This application is distributed under the General Public License (GPL). See the <a href="http://www.gnu.org/">Free Software Foundation</a> for further details.</td>
-    </tr>
-</table>
-<br>
-
-</center>
+<body>
+    <header>
+      <h1>Coccinella HTTP server (tinyhttpd)</h1>
+    </header>
+    <article>
+      <h2>File Not Found (404)</h2>
+      <section><p>You have requested a file or directory listing that either does not exist or that cannot be provided. Coccinella handles file transports through a built-in HTTP server which gives limited acces to the user's file system. This is due to privacy and security considerations.</p></section>
+    </article>
+    <footer><a href="http://coccinella.im/">Powered by Coccinella</a></footer>
 </body>
 </html>
